@@ -1,6 +1,7 @@
 FOF 3.0.8
 ================================================================================
 + gh-584 removeHeader method added in Form, allowing you to remove a header from an XML form.
+# [HIGH] FOF30\Update\Joomla could not detect Joomla! updates due to changes in Joomla! XML update sources
 # [HIGH] Assets tracking was broken due to wrong use of in_array instead of array_key_exists
 # [HIGH] The access model state was always filled with the default access level, making it impossible to filter by viewing access level.
 
